Added new pages

--- a/templates/alojamientos.html
+++ b/templates/alojamientos.html
@@ -38,7 +38,7 @@
                 <p>
                     Nuestra recomendación es que os hospedéis en Pontevedra puesto que será aquí donde nos reuniremos
                     para la preboda el viernes 21 de agosto.
-                    Además, el servicio conectará al día siguiente el centro de Pontevedra (Plaza de Galicia) con el
+                    Además, el servicio de autobuses conectará al día siguiente el centro de Pontevedra (Plaza de Galicia) con el
                     Pazo da Touza.
                 </p>
                 <p>A continuación, te mostramos una
@@ -106,6 +106,23 @@
                 </div>
                 <!-- Row End -->
 
+
+                <!-- Item -->
+                <div class="row wed_row_padding">
+                    <div class="col-md-offset-1 col-md-5">
+                        <div>
+                            <h3><a href="https://www.booking.com/hotel/es/boavila-pontevedra.es.html/"> Boa Vila</a></h3>
+                            <span>Rúa Real, 4, 36002 Pontevedra<br><br></span>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5">
+                        <img src="{% static 'images/vila.jpeg' %}" class="fullwidth" alt="">
+                    </div>
+                </div>
+                <!-- Row End -->
+
+
                 <!-- Item -->
                 <div class="row wed_row_padding">
                     <div class="col-md-offset-1 col-md-5">
@@ -121,14 +138,48 @@
                 </div>
                 <!-- Row End -->
 
+                <!-- Item -->
+                <div class="row wed_row_padding">
+                    <div class="col-md-offset-1 col-md-5">
+                        <div>
+                            <h3><a href="https://www.hotelmadrid.org/"> Hotel Madrid</a></h3>
+                            <span>Rúa Andrés Mellado, 5, 36001 Pontevedra<br><br></span>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5">
+                        <img src="{% static 'images/hotel_madrid.jpg' %}" class="fullwidth" alt="">
+                    </div>
+                </div>
+                <!-- Row End -->
+
+                  <!-- Item -->
+                <div class="row wed_row_padding">
+                    <div class="col-md-offset-1 col-md-5">
+                        <div>
+                            <h3><a href="http://www.hotelcomerciopontevedra.com/"> Hotel Comercio</a></h3>
+                            <span>Rúa Augusto González Besada, 5, 36001 Pontevedra<br><br></span>
+                        </div>
+                    </div>
+
+                    <div class="col-md-5">
+                        <img src="{% static 'images/comercio.jpeg' %}" class="fullwidth" alt="">
+                    </div>
+                </div>
+                <!-- Row End -->
+
+
+
                 <p>
                     Otros:
                 </p>
                 <p>
-                    A pesar de que nuestro consejo es quedarte en Pontevedra, si finalmente eliges la costa de Vigo te dejamos una lista con hoteles que puedes encontrar por la zona:
+                    A pesar de que nuestro consejo es que te alojes en Pontevedra, por si finalmente eliges la costa de Vigo, te dejamos una lista con hoteles que puedes encontrar por la zona:
                 </p>
 
                 <div class="row">
+
+                  <!-- Item -->
                     Baiona
 €€€: Parador de Baiona
 €€: Pazo de Mendoza
@@ -141,6 +192,7 @@ Playa América
 Nigrán
 €€: Hotel Val Conventión
 €: Pensión Venus – El Retiro
+
                 </div>
             </div>
             <!-- container end -->
