--- a/templates/base.html
+++ b/templates/base.html
@@ -97,8 +97,8 @@
 
                         <li class="wed_parent"><a href="#">Otros <i class="fas fa-angle-down"></i> </a>
                             <ul>
-                                <li><a href="peluqerias">Peluquerías</a></li>
-                                <li><a href="regalo_boda">Regalo de boda</a></li>
+                                <li><a href="peluquerias">Peluquerías</a></li>
+                                <li><a href="manicura">Manicura</a></li>
 
                             </ul>
                         </li>
