--- a/templates/confirmacion.html
+++ b/templates/confirmacion.html
@@ -81,7 +81,15 @@
                                             <option>5</option>
                                         </select>
                                     </div>
+                                                                        <div class="col-md-12">
+                                        <select class="form-control" name="guests" required>
+                                            <option value="">Vas a utilizar el servicio de autobús?</option>
+                                            <option>Sí</option>
+                                            <option>No</option>
+                                        </select>
+                                    </div>
                                 </div>
+
 
                                 <div class="row">
                                     <p>
