--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                 <div class="row wed_middle_titles text-center">
                     <div class="col col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 mb-5">
                             <h2>Un largo camino</h2>
-                            <p>Recently cut out of an illustrated magazine and housed in a nice, gilded frame. It showed a lady fitted out with a fur hat</p>
+                            <p>Desde hace ya algún tiempo, saltando de ciudad en ciudad...</p>
                     </div>
                 </div>
                 <div class="row">
@@ -51,42 +51,63 @@
                             <ul>
                                 <li>
                                     <div class="details">
-                                        <h3>First meet</h3>
-                                        <span class="date">25 Dec 2018</span>
-                                        <p>Luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.</p>
+                                        <h3>Primer viaje juntos</h3>
+                                        <span class="date">Agosto 2009</span>
+                                        <p>Nuestro primer viaje juntos, il ferro agosto romano, entre tortellinis y helados</p>
                                     </div>
                                     <div class="img-holder">
-                                        <img src="{% static 'images/people/friend_1.jpg' %}" alt>
+                                        <img src="{% static 'images/viajes/roma.jpg' %}" alt>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="img-holder">
-                                        <img src="{% static 'images/roma.jpg' %}" alt>
+                                        <img src="{% static 'images/viajes/berna.jpg' %}" alt>
                                     </div>
                                     <div class="details">
-                                        <h3>First date</h3>
-                                        <span class="date">25 Dec 2018</span>
-                                        <p>Luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.</p>
+                                        <h3>Así que en el siguiente, escapamos del calor, calculamos mal y nos pasamos con el frío...</h3>
+                                        <span class="date">Diciembre 2010</span>
+                                        <p> </p>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="details">
-                                        <h3>Proposal</h3>
-                                        <span class="date">25 Dec 2018</span>
-                                        <p>Luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.</p>
+                                        <h3>París</h3>
+                                        <span class="date">Noviembre 2011</span>
+                                        <p>Disfrutamos de uno días geniales paseando por las calles de París, corriendo de museo en museo.</p>
                                     </div>
                                     <div class="img-holder">
-                                        <img src="{% static 'images/people/friend_3.jpg' %}" alt>
+                                        <img src="{% static 'images/viajes/paris.jpg' %}" alt>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="img-holder">
-                                        <img src="{% static 'images/people/friend_4.jpg' %}" alt>
+                                        <img src="{% static 'images/viajes/noruega4.jpg' %}" alt>
                                     </div>
                                     <div class="details">
-                                        <h3>Engagement</h3>
-                                        <span class="date">25 Dec 2018</span>
-                                        <p>Luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.</p>
+                                        <h3>Noruega</h3>
+                                        <span class="date">Julio 2016</span>
+                                        <p>En Noruega empezamos a sumergirnos en el mundo del deporte...</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="details">
+                                        <h3>de alta competición</h3>
+                                        <span class="date">Agosto 2019</span>
+                                        <p> uno con más éxito que otra...</p>
+                                    </div>
+                                    <div class="img-holder">
+                                        <img src="{% static 'images/viajes/agua.jpg' %}" alt>
+                                    </div>
+
+                                </li>
+<li>
+                                    <div class="img-holder">
+                                        <img src="{% static 'images/viajes/boda.jpg' %}" alt>
+                                    </div>
+                                    <div class="details">
+                                        <h3>Boda</h3>
+                                        <span class="date">Septiembre 2019</span>
+                                        <p> Y después de muchas bodas juntoas, sin que Beni hubiese sido nunca presionado, ¡por fin llega la nuestra!.</p>
                                     </div>
                                 </li>
                             </ul>
@@ -166,7 +187,7 @@
                                 <h3><a href="ubicacion">Ubicación</a></h3>
                                 <span>Rúa dos Pazos, 119, 36360 Nigrán, Pontevedra<br><br></span>
                                 <p>
-                                    Tanto la ceremonia civil como el aperitivo y la cena que se servirán a continuación tendrán lugar
+                                    Tanto la ceremonia como el aperitivo y la cena que se servirán a continuación tendrán lugar
                                 en O Pazo da Touza, construcción del siglo XVI que format parte del patrimonio arquitectónico gallego.
                                 Se encuentra ubicado en el ayuntamiento de Nigrán.
 
@@ -182,8 +203,8 @@
                                 <h3><a href="alojamientos">Alojamiento</a></h3>
                                 <span>Pontevedra<br><br></span>
                                 <p>
-                                    Ubicada a escasos 50 km del Pazo da Touza, Pontevedra es el sitio idoneo para hospedarse.
-                                El servicio de autobuses conectara el centro de la ciudad con el Pazo de manera regular.
+                                    Ubicada a escasos 50 km del Pazo da Touza, Pontevedra es el sitio idóneo para hospedarse.
+                                El servicio de autobuses conectará el centro de la ciudad con el Pazo de manera regular.
                             </div>
                         </div>
                         <!-- Item -->
