--- a/templates/regalo-boda.html
+++ b/templates/regalo-boda.html
@@ -32,10 +32,10 @@
         <section class="wed_section_inner">
             <div class="container">
                 <div class="row">
-                    <p>Nuestro mejor regalo es que nos acompañéis en este día tan especial para nostros pero si queréis tener un detalle
-                    os dejamos el número de cuenta para que nos ayudéis con la luna de miel. </p>
+                    <p>Nuestro mejor regalo es que nos acompañéis en este día tan especial, pero si queréis tener un detalle,
+                    os dejamos nuestro número de cuenta para que nos ayudéis con la luna de miel. </p>
 
-                    <p> Numero de cuenta</p>
+                    <p> Número de cuenta: ES56 0128 0035 6401 0003 9751</p>
                 </div>
                 <!-- Row End -->
             </div>
