--- a/templates/ubicacion.html
+++ b/templates/ubicacion.html
@@ -7,7 +7,7 @@
 
     <!-- PAGE TITLE SMALL -->
     <div class="wed_page_title wed_page_title_great wed_image_bck wed_fixed wed_wht_txt"
-         data-stellar-background-ratio="0.2" data-image="{% static 'images/fashion_couple/slider1.jpg' %}">
+         data-stellar-background-ratio="0.2" data-image="{% static 'images/lisboa.jpg' %}">
 
 
         <!-- Over -->
@@ -36,12 +36,12 @@
                 <div class="row">
                     <div class="col-md-4 wed_event_hours">
                         <h3>Hoja de ruta</h3>
-                        <i>Ceremonia Civil</i>
+                        <i>Ceremonia</i>
                         <b>18:00</b><br>
                         <i>Aperitivos</i>
-                        <b>19.00</b><br>
+                        <b>A continuación</b><br>
                         <i>Cena</i>
-                        <b>21.00</b><br>
+                        <b>Sobre las 21.00</b><br>
                         <i>Fiesta</i>
                         <b>00.00</b><br>
                     </div>
