--- a/templates/organizacion.html
+++ b/templates/organizacion.html
@@ -36,32 +36,26 @@
 
             <div class="container text-left">
                 <div class="row">
-                    1. La boda se celebra en el Pazo de Cea.
+                    - La boda se celebra en el Pazo da Touza.
                 </div>
                 <div class="row">
 
-                    2. Lo más fácil es volar a Vigo. Otras opciones son Santiago y Oporto. O si te gustan los
-                    roadtrips,disfrutar del paisaje en coche.
+                    - Lo más fácil es volar a Vigo. Otras opciones son Santiago y Oporto. O si te gustan los
+                    roadtrips, disfrutar del paisaje en coche.
                 </div>
                 <div class="row">
 
-                    3. Te recomendamos dormir en Baiona y alrededores.
+                    - Un taxi del aeropuerto de Vigo a Pontevedra cuesta alrededor de 40 Euros. También hay opción de algún autobús desde el aeropuerto o tren desde el centro de Vigo.
+                    Una vez en Pontevedra, ya no necesitarás transporte.
                 </div>
                 <div class="row">
 
-                    4. Un taxi del aeropuerto a Baiona/alrededores cuesta 40 Euros. Una vez ahí ya no necesitarás
-                    transporte.
+                    - Te recomendamos dormir en Pontevedra, pues es donde se celebrará la preboda y desde donde saldrán los autobuses con dirección al pazo el día de la boda.
+                    El regreso también será desde el pazo al centro de la ciudad.
                 </div>
                 <div class="row">
 
-                    5. De Baiona al Pazo de Cea hay 15 minutos y de Vigo al Pazo hay 25 minutos aproximadamente.
-                </div>
-                <div class="row">
-
-                    6. Habrá buses desde Vigo y alrededores de Baiona que te llevarán al Pazo de Cea. Si quieres llevar
-                    tu coche no hay problema, hay aparcamiento en el pazo.
-                </div>
-                Si te animas, puedes montarte unas mini-vacaciones en Galicia aprovechando el viaje!!
+                ¡Y si te animas, puedes montarte unas mini-vacaciones en Galicia aprovechando el viaje!
 
             </div>
         </section>
