--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                                     <div class="details">
                                         <h3>Primer viaje juntos</h3>
                                         <span class="date">Agosto 2009</span>
-                                        <p>Nuestro primer viaje juntos, il ferro agosto romano, entre tortellinis y helados</p>
+                                        <p>Nuestro primer viaje juntos, il ferro agosto romano, entre tortellinis y helados.</p>
                                     </div>
                                     <div class="img-holder">
                                         <img src="{% static 'images/viajes/roma.jpg' %}" alt>
@@ -64,16 +64,16 @@
                                         <img src="{% static 'images/viajes/berna.jpg' %}" alt>
                                     </div>
                                     <div class="details">
-                                        <h3>Así que en el siguiente, escapamos del calor, calculamos mal y nos pasamos con el frío...</h3>
+                                        <h3>Suiza</h3>
                                         <span class="date">Diciembre 2010</span>
-                                        <p> </p>
+                                        <p> Así que en el siguiente, escapamos del calor, calculamos mal y nos pasamos con el frío...</p>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="details">
                                         <h3>París</h3>
                                         <span class="date">Noviembre 2011</span>
-                                        <p>Disfrutamos de uno días geniales paseando por las calles de París, corriendo de museo en museo.</p>
+                                        <p>Disfrutamos de unos días geniales paseando por las calles de París, corriendo de museo en museo.</p>
                                     </div>
                                     <div class="img-holder">
                                         <img src="{% static 'images/viajes/paris.jpg' %}" alt>
@@ -107,7 +107,7 @@
                                     <div class="details">
                                         <h3>Boda</h3>
                                         <span class="date">Septiembre 2019</span>
-                                        <p> Y después de muchas bodas juntoas, sin que Beni hubiese sido nunca presionado, ¡por fin llega la nuestra!.</p>
+                                        <p> Y después de muchas bodas juntos, y sin que Beni hubiese sido nunca presionado, ¡por fin llega la nuestra!.</p>
                                     </div>
                                 </li>
                             </ul>
@@ -153,9 +153,7 @@
                 <div class="row wed_auto_height wed_middle_titles">
                     <div class="col-md-12 wed_image_bck wed_fixed text-center">
                         <h2> ¿Te lo vas a perder?</h2>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices malesuada ante
-                            quis pharetra. Nullam notn bibendum dolor. Ut vel turpis accumsan, efficitur dolor
-                            fermentum, tincidunt metus. Etiam ut ultrices </p>
+                        <p> Nos encataría contar con vuestra asistencia. Por favor, confirmadnos lo antes posible, para lo que podéis emplear el siguiente formulario. </p>
                         <a href="confirmacion" class="btn btn_new">Confirmación</a>
                     </div>
                     <!-- col end -->
@@ -188,7 +186,7 @@
                                 <span>Rúa dos Pazos, 119, 36360 Nigrán, Pontevedra<br><br></span>
                                 <p>
                                     Tanto la ceremonia como el aperitivo y la cena que se servirán a continuación tendrán lugar
-                                en O Pazo da Touza, construcción del siglo XVI que format parte del patrimonio arquitectónico gallego.
+                                en O Pazo da Touza, construcción del siglo XVI que forma parte del patrimonio arquitectónico gallego.
                                 Se encuentra ubicado en el ayuntamiento de Nigrán.
 
                             </div>
