--- a/templates/manicura.html
+++ b/templates/manicura.html
@@ -7,11 +7,11 @@
 
     <!-- PAGE TITLE SMALL -->
     <div class="wed_page_title wed_page_title_great wed_image_bck wed_fixed wed_wht_txt"
-         data-stellar-background-ratio="-0.6" data-image="{% static 'images/headers/escocia.jpg' %}">
+         data-stellar-background-ratio="-0.6" data-image="{% static 'images/headers/cordoba.jpg' %}">
 
 
         <!-- Over -->
-        <div class="wed_over" data-color="#8630fc" data-opacity="0.8"></div>
+        <div class="wed_over" data-color="#8630fc" data-opacity="0.4"></div>
 
         <div class="container text-left">
             <div class="row">
