--- a/templates/regalo-boda.html
+++ b/templates/regalo-boda.html
@@ -7,11 +7,11 @@
 
     <!-- PAGE TITLE SMALL -->
     <div class="wed_page_title wed_page_title_great wed_image_bck wed_fixed wed_wht_txt"
-         data-stellar-background-ratio="-0.6" data-image="{% static 'images/headers/cordoba.jpg' %}">
+         data-stellar-background-ratio="-0.6" data-image="{% static 'images/headers/escocia.jpg' %}">
 
 
         <!-- Over -->
-        <div class="wed_over" data-color="#8630fc" data-opacity="0.8"></div>
+        <div class="wed_over" data-color="#8630fc" data-opacity="0.4"></div>
 
         <div class="container text-left">
             <div class="row">
@@ -33,7 +33,7 @@
             <div class="container">
                 <div class="row">
                     <p>Nuestro mejor regalo es que nos acompañéis en este día tan especial, pero si queréis tener un detalle,
-                    os dejamos nuestro número de cuenta para que nos ayudéis con la luna de miel. </p>
+                    os dejamos nuestro número de cuenta para que nos ayudéis con la luna de miel.</p>
 
                     <p> Número de cuenta: ES56 0128 0035 6401 0003 9751</p>
                 </div>
