--- a/templates/organizacion.html
+++ b/templates/organizacion.html
@@ -11,7 +11,7 @@
 
 
         <!-- Over -->
-        <div class="wed_over" data-color="#8630fc" data-opacity="0.7"></div>
+        <div class="wed_over" data-color="#8630fc" data-opacity="0.4"></div>
         <div class="wed_over" data-color="#000" data-opacity="0.1"></div>
 
         <div class="container text-left">
@@ -35,6 +35,9 @@
         <section class="wed_section_innerpage">
 
             <div class="container text-left">
+                <p>
+                    Seguro que ya lo tenéis todo organizado para el evento del año, pero por si pudiera servir de ayuda, os dejamos algunos consejos:
+                </p>
                 <ul>
                     <li>
                         La boda se celebra en el Pazo da Touza.
