--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Euge & Beni 22.08.2020</title>
 
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}"/>
 
     <!-- Library CSS -->
     <link href="{% static 'css/wedding_library.css' %}" rel="stylesheet">
